--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,12 +17,12 @@ body {
 .header ul {
     list-style: none;
     display: flex;
-    gap: 16px;
+    gap: 24px;
     align-items: flex-end;
     justify-content: flex-end;
     margin-top: 0;
     margin-right: 200px;
-    padding: 16px 24px;
+    padding: 16px 0px;
 
 }
 
@@ -89,6 +89,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 48px auto;
 }
 
 #styletext {
@@ -102,6 +103,7 @@ body {
     gap: 48px;
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 64px;
 }
 
 .shoppingtext {
@@ -111,4 +113,22 @@ body {
     font-weight: 600;
     color: #1F2937;
     padding: 12px 6px;
+}
+
+.inspo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #E5E7EB;
+    padding: 100px 400px;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+#author {
+    align-self: flex-end;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
 }
